# VoiceReaderTG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: retell_webhook.py  routes.py  vapi_webhook.py
app/bot/: handlers.py  runner.py
app/models/: schemas.py
app/services/: extractor.py  retell_call.py  session_store.py  summarizer.py  tts.py  vapi_assistant.py  web_search.py
app/templates/: chat.html
app/tools/: document_tools.py
docs/: ARCHITECTURE.md  PROMPTS.md  SETUP.md  VAPI_INTEGRATION.md
tests/: test_extractor.py  test_summarizer.py  test_tts.py
userdocs/: VapiClaude.md
